--- a/trunk/develop/lab/CI/static/muchiii.css
+++ b/trunk/develop/lab/CI/static/muchiii.css
@@ -295,3 +295,17 @@ td {
     padding:3px;
     text-align:center;
 }
+#masthead {
+    margin-top:20px;
+    padding-top:10px;
+    border-top:1px solid gray;
+}
+#changes {
+    margin:10px 0;
+    padding:10px;
+    border:1px solid #BBDDFF;
+    background-color:#DDEEFF;
+}
+#changes .first {
+    margin-bottom:10px;
+}
